--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ body {
   background: #000;
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;;
+}
+
+h3{
+  font-size: 16px;;
+}
+
+p{
+  font-size: 14px;
 }
 
 #game {
@@ -14,6 +23,14 @@ body {
   font-size: 40px;
   width: 320px;
   margin: auto;
+  position: relative;
+}
+
+.info{
+  position: absolute;
+  right: -240px;
+  width: 200px;
+  top: 200px;
 }
 
 .main {
@@ -27,7 +44,7 @@ body {
 .cell {
   width: 30px;
   height: 30px;
-  border: 1px solid silver;
+  border: 1px solid #191919;
   display: inline-block;
 }
 
@@ -41,8 +58,8 @@ body {
 
 #next-tetro {
   position: absolute;
-  top: 200px;
-  left: 200px;
+  top: 255px;
+  left: -200px;
   font-size: 0;
 }
 
@@ -55,4 +72,5 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-shadow: 1px 1px 0px white;
 }
